fix: added style for not touching borders on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -28,9 +28,9 @@ ul {
 .searchbar__control {
   display: flex;
   position: relative;
-  margin: 0 auto;
+  margin: 0 2%;
   padding: 0.3rem 0.5rem 0 1rem;
-  max-width: 40rem;
+  max-width: 100%;
   align-items: center;
   height: 2.5rem;
   border: 1px solid #dadce0;
@@ -199,8 +199,10 @@ ul {
   }
   .searchbar__control {
     width: 34rem;
+    margin: 0 auto;
     outline: none;
   }
+  /* TODO left here check if the margins work as expected */
   .searchbar__control:hover,
   .searchbar__control:active {
     box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
